# NNEF-CPP-Tools

./: CMakeLists.txt  README.md  infer.cpp  nnef2ada.cpp  nnef_tff_info.cpp
